<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">厨房秘密</string>
    <string name="hello_world">爸爸我回来啦！</string>
    <string name="action_settings">设定</string>
    <string name="delete">删掉</string>
    <string name="replay">反馈</string>
    <string name="login">登录</string>
    <string name="signin">注册</string>
    <string name="exit">退出</string>
    <string name="community">社区</string>
    <string name="recipe">食谱</string>
    <string name="search">搜搜</string>
    <string name="mySetting">我的</string>
    <string name="back">返回</string>
    <string name="dish_detail">食谱</string>
    <string name="dish_comment">评论</string>
    <string name="favor_dishes">喜欢的菜谱</string>
    <string name="friends">我的盆友</string>
    <string name="user_comment">我的评论</string>
    <string name="user_notification">我的消息</string>
    <string name="bill">我的锅</string>
    <string name="login_tip">请先登录</string>
    <string name="user_no_dish_tip">请先添加食谱</string>
    <string name="title_activity_user_info">用户信息活动？？？</string>
    <string name="userInfo">用户信息</string>
    <string name="hello_blank_fragment">此处空白拜拜！</string>
    <string name="title_activity_restaurant_fragment">餐厅小卡片</string>
    <string name="title_activity_restaurant_detail">餐厅信息活动</string>
    <string name="title_activity_restaurant_location">餐厅定位活动</string>
    <string name="friend_request">新朋友请求</string>
    <string name="dish_pay">买买买</string>
    <string name="title_activity_dish_pay">菜谱付款活动</string>
    <string name="title_activity_bill">账单活动</string>
    <string name="bill_tip">预览账单</string>
    <string name="title_activity_location">定位活动</string>
    <string name="load_tips">地址正在生成</string>
    <string name="kitchen_secret">厨房秘密</string>
    <string name="favor_dish_item">我喜爱的</string>
    <string name="no_favor">你还没有添加任何喜爱的食物</string>
    <string name="sort">筛选</string>
    <string name="complete">完成</string>
    <string name="edit_person_info">编辑个人资料</string>
    <string name="nickname">昵称:</string>
    <string name="gender">性别：</string>
    <string name="birth">生日:</string>
    <string name="occupation">职业:</string>
    <string name="self_description">个人宣言:</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="character_counter_pattern" translatable="false">%1$d/%2$d</string>
    <string name="title_activity_personal_space">PersonalSpaceActivity</string>
    <string name="large_text">我的菜谱</string>
    <string name="setting">更多</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_person_space">PersonSpaceActivity</string>
    <string name="setting_detail">设置</string>
    <string name="add_recipe">添加食谱</string>
    <string name="recipe_Name">菜谱的名字：</string>
    <string name="recipe_description">菜谱的介绍：</string>
    <string name="add_material">添加食材：</string>
    <string name="add_step">添加步骤：</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>