<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.gaolonglong.fragmenttabhost.MainActivity">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/login_settings"
            android:orderInCategory="100"
            android:title="@string/login"
            app:showAsAction="never" />

        <item
            android:id = "@+id/sign_settings"
            android:orderInCategory="100"
            android:title="@string/signin"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/add_settings"
            android:orderInCategory="100"
            android:title="添加食谱"
            app:showAsAction="never" />

        <item
            android:id="@+id/exit_settings"
            android:orderInCategory="100"
            android:title="退出"
            app:showAsAction="never" />
    </group>
</menu>
