<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/title_nav_bar">

        <Button
            android:id="@+id/okay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/complete"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            style="@style/title_text_style"
            android:background="#a7a4e0"/>


        <TextView
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_person_info"
            android:id="@+id/textView" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical"
        android:visibility="visible"
        android:touchscreenBlocksFocus="true"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:id="@+id/layout_register"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            android:scrollbars="vertical"
            android:weightSum="1">

            <ImageButton
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/default_avatar"/>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="550dp"
                android:layout_margin="0dp"
                android:orientation="vertical"
                android:weightSum="1">


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="2">

                    <TableRow android:layout_column="1">
                        <TextView
                            android:id="@+id/nickname_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nickname"
                            android:textSize="20sp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:background="@mipmap/login_input"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/nickname_edit"
                                android:layout_width="fill_parent"
                                android:layout_height="30dp"
                                android:background="@null"
                                android:ems="10"
                                android:focusableInTouchMode="true"
                                android:gravity="center_vertical"
                                android:padding="5dp"
                                android:paddingRight="30dp"
                                android:textColor="@color/edit_text_color"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow>
                        <TextView
                            android:id="@+id/gender_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textSize="20sp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:background="@mipmap/login_input"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/gender_edit"
                                android:layout_width="fill_parent"
                                android:layout_height="30dp"
                                android:background="@null"
                                android:ems="10"
                                android:focusableInTouchMode="true"
                                android:gravity="center_vertical"
                                android:padding="5dp"
                                android:paddingRight="30dp"
                                android:textColor="@color/edit_text_color"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:id="@+id/birthday_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/birth"
                            android:textSize="20sp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:background="@mipmap/login_input"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/birthday_edit"
                                android:layout_width="fill_parent"
                                android:layout_height="30dp"
                                android:background="@null"
                                android:ems="10"
                                android:focusableInTouchMode="true"
                                android:gravity="center_vertical"
                                android:padding="5dp"
                                android:paddingRight="30dp"
                                android:textColor="@color/edit_text_color"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:id="@+id/occupation_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/occupation"
                            android:textSize="20sp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:background="@mipmap/login_input"
                            android:orientation="horizontal"
                            android:padding="10dp"
                            android:layout_marginRight="10dp">

                            <EditText
                                android:id="@+id/occupation_edit"
                                android:layout_width="fill_parent"
                                android:layout_height="30dp"
                                android:background="@null"
                                android:ems="10"
                                android:focusableInTouchMode="true"
                                android:gravity="center_vertical"
                                android:padding="5dp"
                                android:paddingRight="30dp"
                                android:textColor="@color/edit_text_color"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:id="@+id/info_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/self_description"
                            android:textSize="20sp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/login_input"
                    android:orientation="horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="151dp"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/edit_text_color"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
