<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="767dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/title_nav_bar" >

            <Button
                android:id="@+id/okay_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/okay_btn"
                android:layout_centerVertical="true"
                android:layout_marginLeft="350dp"/>

            <TextView
                android:id="@+id/tv_dish_name"
                style="@style/title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_recipe" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/dish_description_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@android:drawable/editbox_background"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageButton
                        android:id="@+id/img_dish_picture"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@mipmap/dish_add_img" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/dish_description_ll"
                android:layout_alignParentStart="true">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="2">

                    <TableRow android:layout_column="1">
                        <TextView
                            android:id="@+id/recipeName_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_Name"
                            android:textSize="20sp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:background="@mipmap/login_input"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/recipeName_edit"
                                android:layout_width="fill_parent"
                                android:layout_height="30dp"
                                android:background="@null"
                                android:ems="10"
                                android:focusableInTouchMode="true"
                                android:gravity="center_vertical"
                                android:padding="5dp"
                                android:paddingRight="30dp"
                                android:textColor="@color/edit_text_color"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow>
                        <TextView
                            android:id="@+id/recipeDescription_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_description"
                            android:textSize="20sp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp" />

                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/login_input"
                    android:orientation="horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="83dp"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/edit_text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/addMaterial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_material"
                    android:textSize="20sp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/login_input"
                    android:orientation="horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="151dp"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/edit_text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/addSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_step"
                    android:textSize="20sp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/login_input"
                    android:orientation="horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="83dp"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/edit_text_color"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>>

</LinearLayout>