<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:weightSum="1"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.meetyouatnowhere.kitchensecret_android.activities.AddRecipeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/title_nav_bar" >

        <Button
            android:id="@+id/okay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/complete"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            style="@style/title_text_style"
            android:background="#a7a4e0"/>

        <TextView
            android:id="@+id/tv_dish_name"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_recipe" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/add_recipe_scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical"
        android:visibility="visible"
        android:touchscreenBlocksFocus="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            android:scrollbars="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:id="@+id/dish_description_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@android:drawable/editbox_background"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:id="@+id/img_recipe_picture"
                        android:src="@mipmap/default_select_photo"
                        android:layout_gravity="center" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dish_description_ll"
                android:layout_alignParentStart="true"
                android:weightSum="1">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="2">

                    <TableRow android:layout_column="1">
                        <TextView
                            android:id="@+id/recipeName_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_Name"
                            android:textSize="20sp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@mipmap/login_input"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/recipeName_edit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:ems="10"
                                android:focusableInTouchMode="true"
                                android:gravity="center_vertical"
                                android:padding="5dp"
                                android:paddingRight="30dp"
                                android:textColor="@color/edit_text_color"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow>
                        <TextView
                            android:id="@+id/recipeDescription_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_description"
                            android:textSize="20sp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp" />

                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/login_input"
                    android:orientation="horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="53dp"
                        android:background="@null"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/edit_text_color"
                        android:textSize="20sp"
                        android:id="@+id/recipeDescription_editText" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="所需材料"
                    android:textSize="20sp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp" />

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:id="@+id/materials"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="步骤"
                    android:textSize="20sp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp" />

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:id="@+id/steps"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>